# simple-agent-framework

./: .env.template  .gitignore  Architecture.md  README.md  pyproject.toml  requirements.txt
agent_framework/: __init__.py  agent.py  config.py  factory.py  models.py  schemas.py
agent_framework/llm/: models.py  openai_provider.py
agent_framework/tools/: base.py  registry.py
agent_framework/utils/: hooks.py  logging.py  tool_registry.py
examples/: __init__.py  run_simple_agent.py  run_travel_agent.py  run_umbrella_agent.py  run_umbrella_agent_galileo.py  run_weather_vibes_agent.py
examples/agents/simple_agent/: __init__.py  agent.py
examples/agents/simple_agent/tools/: __init__.py  keyword_extraction.py  text_analysis.py
examples/agents/travel_agent/: agent.py
examples/agents/travel_agent/logging/: GalileoAgentLogger.py
examples/agents/travel_agent/templates/: planning.j2
examples/agents/travel_agent/tools/: event_finder.py  itinerary_builder.py  restaurant_recommender.py
examples/agents/umbrella_agent/: agent.py
examples/agents/umbrella_agent/logging/: GalileoAgentLogger.py
examples/agents/umbrella_agent/templates/: planning.j2
examples/agents/umbrella_agent/tools/: schemas.py  umbrella_decider.py  weather_retriever.py
examples/agents/umbrella_agent_galileo/: __init__.py  agent.py
examples/agents/umbrella_agent_galileo/logging/: GalileoAgentLogger.py  utils.py
examples/agents/umbrella_agent_galileo/tools/: schemas.py  umbrella_decider.py  (+1 more)
examples/agents/weather_vibes_agent/: __init__.py  agent.py
scripts/: verify_structure.py
(+6 files in other folders)
